# spam-ham

./: .env.example  Dockerfile  README.md  index.html  main.py  multinomial.joblib  pyproject.toml  requirements.txt  spam_detection.ipynb  vectorizer.joblib
