[project]
name = "spam-detection-bayes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.123.2",
    "joblib>=1.5.3",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]
